--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 :root{
   font-family: Inter, Arial, Helvetica, sans-serif;
+  background: #060A09;
+  color: #F4F4F4;
+  font-family: Inter, Arial, sans-serif;
+}
+
+body{
+  padding: 0;
+  margin: 0;
 }
