--- a/src/styling/Scroll.css
+++ b/src/styling/Scroll.css
@@ -6,7 +6,9 @@
     font-size: 12px;
     letter-spacing: 3px;
     text-align: center;
-    margin-top: 78px;
+    position: absolute;
+    bottom: 48px;
+    left: 50%;
     color: #878787;
 }
 
@@ -14,10 +16,9 @@
     overflow: hidden;
     display: block;
     position: absolute;
-    left: 50%;
+    bottom: -24px;
     width: 1.5px;
     height: 12px;
-    bottom: 24px;
 }
 
 .scroll_line:first-of-type{
