--- a/src/styling/link_btn.css
+++ b/src/styling/link_btn.css
@@ -4,12 +4,12 @@
     text-decoration: none;
     color: #f4f4f4;
     gap: 8px;
-    border-bottom: 1px solid #f4f4f4;
     width: fit-content;
     font-size: 24px;
     font-weight: 400px;
     box-sizing: border-box;
     padding: 2px 0;
+    position: relative;
 }
 
 #right_arrow{
@@ -17,3 +17,24 @@
     width: 18px;
     height: 18px;
 }
+
+.underline{
+    width: 100%;
+    height: 1px;
+    background-color: #f4f4f4;
+    position: absolute;
+    bottom: 0;
+}
+
+.underline_animation{
+    width: 50%;
+    height: 1px;
+    background-color: #060A09;
+    transform: translateX(-100%);
+}
+
+#link_btn:hover .underline_animation{
+    transform: translateX(200%);
+    transition: 1s ease;
+}
+
