--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,20 @@
   font-family: Inter, Arial, sans-serif;
 }
 
+::-webkit-scrollbar{
+  width: 6px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: #000;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: #878787;
+}
+
 body{
   padding: 0;
   margin: 0;
 }
+
