--- a/src/styling/Used_recource.css
+++ b/src/styling/Used_recource.css
@@ -9,8 +9,12 @@
     padding: 8px;
     box-sizing: border-box;
     text-decoration: none;
-    transition: .4s ease;
 }
+
+.recource_container{
+    width: fit-content;
+}
+
 .recource_icon{
     width: 36px;
     height: 36px;
@@ -31,10 +35,4 @@
     display: flex;
     align-items: center;
     gap: 8px;
-}
-
-.used_recource:hover{
-    width: 368px;
-    height: 68px;
-    transition: .4s ease;
 }
