--- a/src/styling/Note.css
+++ b/src/styling/Note.css
@@ -1,5 +1,4 @@
 .hidden{
-    opacity: 0 !important ;
     position: absolute;
     z-index: -1;
 }
@@ -83,6 +82,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    width: 442px;
 }
 
 .subheader h3{
