--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+*{
+  cursor: none;
+}
+
 :root{
   font-family: Inter, Arial, Helvetica, sans-serif;
   background: #060A09;
