--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -1,6 +1,20 @@
+#home{
+    height: 100vh;
+}
 
 .content{
     padding: 0 36px;
+}
+
+#home_overlay{
+    background: #f4f4f4;
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    clip-path: circle(var(--clip-size) at 96vw 3vh) ;
+    transition: .5s ease-out;
 }
 
 #main_header{
@@ -9,7 +23,20 @@
     color: #f4f4f4;
 }
 
+#main_header_overlay{
+    margin: 200px 0 0 0;
+    font-size: 48px;
+    color: #060A09;
+}
+
 .secondary_header{
+    display: flex;
+    align-items: end;
+    gap: 12px;
+    margin: 24px 0 0 0;
+}
+
+.secondary_header_overlay{
     display: flex;
     align-items: end;
     gap: 12px;
@@ -23,7 +50,19 @@
     font-weight: 500;
 }
 
+.secondary_header_overlay h2{
+    margin: 0;
+    font-size: 36px;
+    color: #9b9b9b;
+    font-weight: 500;
+}
+
+
 #link_btn{
+    margin: 64px 0 0 0;
+}
+
+#link_btn_lm{
     margin: 64px 0 0 0;
 }
 
