--- a/src/styling/cursor.css
+++ b/src/styling/cursor.css
@@ -4,8 +4,9 @@
     height: 12px;
     border-radius: 12px;
     background-color: #fff;
-    z-index: 5;
+    z-index: 8;
     pointer-events: none;
+    mix-blend-mode: difference;
 }
 
 .cursor_outline{
@@ -14,6 +15,7 @@
     height: 24px;
     border-radius: 16px;
     border: #fff solid 2px;
-    z-index: 5;
+    z-index: 8;
     pointer-events: none;
+    mix-blend-mode: difference;
 }
